# rust-axios

./: .gitignore  Cargo.toml  readme.md
src/: axios.rs  config.rs  error.rs  interceptor.rs  lib.rs  method.rs  response.rs
src/middleware/: auth_middleware.rs
