[package]
name = "rust-axios"
version = "0.0.1"
#rust-version = "1.80.0"
edition = "2024"
authors = ["Sergei"]
description = "HTTP client for Rust lang"
keywords = ["web"]

[features]
default = []


[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
async-trait = { version = "0.1.88" }
http = { version = "1.3.1" }
reqwest-middleware = { version = "0.4.2", features = ["json"] }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0"